Addressed failures for jdk8 as Set.of is not available in Java 8